--- a/src/app/pages/portafolio/portafolio.component.html
+++ b/src/app/pages/portafolio/portafolio.component.html
@@ -18,7 +18,7 @@
                 <p>Branding</p>
             </div>
         </a>
-        <a href="portfolio-item.html" class="rk-item ae-masonry__item"><img src="assets/img/project-2.jpg" alt="">
+        <a href="portfolio-item.html" class="animated fadeIn rk-item ae-masonry__item"><img src="assets/img/project-2.jpg" alt="">
             <div class="item-meta">
                 <h2>Pickled Tousled</h2>
                 <p>Art Direction</p>
