--- a/src/styles.css
+++ b/src/styles.css
@@ -36,3 +36,26 @@
     -webkit-animation-name: fadeIn;
     animation-name: fadeIn;
 }
+
+
+/**/
+
+body {
+    padding: 1em;
+    background: white;
+    color: #777;
+    text-align: center;
+    font-family: "Gill sans", sans-serif;
+    width: 80%;
+    margin: 0 auto;
+}
+
+
+/*
+    Color del Loading
+  */
+
+svg path,
+svg rect {
+    fill: black;
+}
